--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body{
-  background-color: #000;
+  background-color: blue;
   color: #fff;
   font-family: 'Exo 2', sans-serif;
   padding-left: 90px;
