--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -44,7 +44,7 @@
 
 .text-highlight {
     color: #FD841F;
-    
+
 }
 
 .navbar {
@@ -226,4 +226,18 @@
     .footer {
         margin-top: 2rem;
     }
+}
+
+
+@media(max-width:480px) {
+    
+    .intro {
+        font-size: 2.5rem;
+    }
+
+    .leading {
+        width: 80%;
+        font-size: 1.3rem;
+    }
+
 }
